# sabela

./: .prettierignore  CLAUDE.md  CSG.md  Dockerfile  Makefile  README.md  getting_to_the_data.md  sabela.cabal  test_examples.sh
.github/workflows/: haskell-ci.yml
app/: Main.hs
cli-skill/plugins/siza/skills/siza/: SKILL.md
data/: api-reference.txt
examples/: CaliforniaHousing.md  Iris.md  grammar-of-graphics.md  scatter-selection.md  widgets.md
infra/: deploy-box.sh  deploy-sabela.sh
sabela-hub/: sabela-hub.cabal
sabela-hub/app/: Main.hs
sabela-hub/src/Hub/: Ecs.hs  Reaper.hs  Types.hs
sabela-hub/src/Hub/Shares/: Api.hs
sabela-hub/test/: Main.hs
sabela-hub/test/Test/: MockEcs.hs  ReaperSpec.hs
scripts/: build.sh  check-module-size.sh  format.sh  test_examples.sh  test_examples_hub.sh
src-ghc94/Sabela/Parse/Ast/: PatNodeBinders.hs
src-ghc96/Sabela/Parse/Ast/: PatNodeBinders.hs
src/Sabela/: Api.hs  Dashboard.hs  Deps.hs  Export.hs  Handlers.hs  Ids.hs  Output.hs  Parse.hs  Server.hs  State.hs  Topo.hs  Url.hs
src/Sabela/Output/: Scatter.hs
src/Sabela/Parse/: Ast.hs
src/Sabela/Parse/Ast/: Names.hs
src/Sabela/Server/: Api.hs  Files.hs  Import.hs
src/Sabela/State/: Environment.hs
static/: dashboard.html  index.html  slideshow.html
static/src/dashboard/: dashboard.html
static/src/dashboard/css/: 01-base.css  02-code.css  03-header.css  04-content.css  05-tables.css  06-outputs.css  07-error-status.css  08-print.css
static/src/dashboard/js/: 01-app.js  02-sandbox.js  03-init.js  04-print.js  05-render.js  06-render-output.js  07-live.js  boot.js
static/src/index/: index.html
static/src/index/css/: 01-base.css  02-toolbar.css  03-layout.css  04-right-panel.css  05-cells.css  06-file-menu.css  07-modals.css  08-icons.css  09-toolbar-extra.css  10-command-palette.css  11-panel-tweaks.css  12-signature.css  13-responsive.css
static/src/index/html/: modals.html
static/src/index/js/: 01-state.js  02-api.js  03-toolbar.js  04-sse.js  05-editor.js  06-info-panel.js  07-output.js  08-file-explorer.js  09-file-preview.js  10-file-io.js  11-file-context-menu.js  12-modals.js  13-shares.js  14-save-panel.js  15-examples.js  16-render.js  17-render-prose.js  18-actions.js  19-theme.js  20-command-palette.js  21-shortcuts.js  22-widget-bridge.js  23-chat-modal.js  24-chat.js  25-init.js  boot-theme.js
static/src/slideshow/: slideshow.html
static/src/slideshow/css/: 01-base.css  02-header.css  03-deck.css  04-live.css  05-syntax.css  06-prose.css  07-output.css  08-footer.css  09-status.css
static/src/slideshow/js/: 01-app.js  02-sandbox.js  03-init.js  04-deck.js  05-render-slide.js  06-editors.js  07-output.js  08-navigation.js  09-keyboard.js  10-live.js  head-extra.js
test/: Main.hs
test/Test/: ApiWireSpec.hs  DefaultExtsSpec.hs  GenerationSpec.hs  ParseSpec.hs  PreinstalledSpec.hs  ProseRoundTripSpec.hs  SessionSpec.hs  TopoSpec.hs  UrlSpec.hs  WebDriverHelpers.hs
tools/: build-frontend.mjs
waterfall/: lighting.hdr
waterfall/models/: 563306.glb  603296.glb  649442.glb  654722.glb  698147.glb  730779.glb  747853.glb  795000.glb  796533.glb  976016.glb
