cabal-version:      3.0
name:               sabela
version:            0.1.0.0
synopsis:           A reactive notebook environment for Haskell.
description:        A reactive notebook environment for Haskell.
homepage:           https://www.datahaskell.org/
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
extra-source-files: static/index.html, static/dashboard.html, static/slideshow.html, data/api-reference.txt

common warnings
    ghc-options: -Wall

library
    import:           warnings
    autogen-modules:  Paths_sabela
    other-modules:    Paths_sabela
    exposed-modules:  Sabela.Anthropic,
                      Sabela.Anthropic.Types,
                      Sabela.AI.Types,
                      Sabela.AI.Store,
                      Sabela.AI.Capabilities,
                      Sabela.AI.Doc,
                      Sabela.AI.Handles,
                      Sabela.AI.Orchestrator,
                      Sabela.AI.ReferenceCard,
                      Sabela.Session,
                      Sabela.SessionTypes,
                      Sabela.Model,
                      Sabela.Api,
                      Sabela.Bridge,
                      Sabela.Dashboard,
                      Sabela.Deps,
                      Sabela.Parse,
                      Sabela.Reactivity,
                      Sabela.State,
                      Sabela.State.BridgeStore,
                      Sabela.State.DependencyTracker,
                      Sabela.State.Environment,
                      Sabela.State.EventBus,
                      Sabela.State.NotebookStore,
                      Sabela.State.SessionManager,
                      Sabela.State.WidgetStore,
                      Sabela.Handlers,
                      Sabela.Handlers.Shared,
                      Sabela.Handlers.Python,
                      Sabela.Output,
                      Sabela.Errors,
                      Sabela.Server,
                      Sabela.Topo,
                      Sabela.PythonSession
    build-depends:    base >= 4 && < 5,
                      aeson >= 0.11.0.0 && < 3,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3 && < 1.4,
                      file-embed >= 0.0.11 && < 0.1,
                      filepath >= 1.4 && < 1.6,
                      ghc-lib-parser >= 9.6 && < 9.20,
                      ghc-lib-parser-ex >= 9.6 && < 9.20,
                      uniplate >= 1.6 && < 1.7,
                      hashable >= 1.3 && < 1.6,
                      http-client >= 0.7 && < 0.10,
                      http-types >= 0.12 && < 0.13,
                      process >= 1.6 && < 1.8,
                      scripths ^>= 0.3,
                      servant-server ^>= 0.20,
                      stm >= 2.4 && < 3,
                      temporary >= 1.3 && < 1.4,
                      text >= 1.2 && < 3,
                      time >= 1.9 && < 2,
                      wai >= 3.2 && < 3.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable sabela
  main-is: Main.hs
  build-depends: base >= 4 && < 5,
                 aeson >= 0.11.0.0 && < 3,
                 bytestring >= 0.10 && < 0.13,
                 containers >= 0.6.7 && < 0.9,
                 directory >= 1.3 && < 1.4,
                 filepath >= 1.4 && < 1.6,
                 http-client-tls >= 0.3 && < 0.4,
                 text >= 1.2 && < 3,
                 unix >= 2.7 && < 2.9,
                 warp >= 3.3  && < 3.5,
                 sabela
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite sabela-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.SessionSpec,
                      Test.TopoSpec,
                      Test.ParseSpec,
                      Test.OutputSpec,
                      Test.PreinstalledSpec,
                      Test.ProseRoundTripSpec,
                      Test.GenerationSpec,
                      Test.AiDocSpec,
                      Test.AiHandlesSpec,
                      Test.AiHistorySpec,
                      Test.AiRestSpec,
                      Test.CacheControlSpec,
                      Test.CompactResultSpec,
                      Test.CycleMsgSpec,
                      Test.ScratchpadRenderSpec,
                      Test.ToolParseSpec,
                      Test.UsageEventSpec,
                      Test.UsageMergeSpec
    build-depends:
        base >= 4 && < 5,
        aeson >= 0.11.0.0 && < 3,
        containers >= 0.6.7 && < 0.9,
        hspec >= 2 && < 3,
        directory >= 1.3.0.0 && < 2,
        scripths ^>= 0.3,
        stm >= 2.4 && < 3,
        temporary >= 1.3 && < 1.4,
        text >= 1.2 && < 3,
        sabela

test-suite sabela-webdriver
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          WebDriverMain.hs
    other-modules:    Test.WebDriverSpec,
                      Test.WebDriverHelpers
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    build-depends:
        base >= 4 && < 5,
        hspec >= 2 && < 3,
        webdriver >= 0.12 && < 0.13,
        http-client >= 0.7 && < 0.10,
        directory >= 1.3.0.0 && < 2,
        http-types >= 0.12 && < 0.13,
        network >= 3.0 && < 3.3,
        text >= 1.2 && < 3,
        process >= 1.6 && < 1.8,
        warp >= 3.3 && < 3.5,
        containers >= 0.6.7 && < 0.9,
        sabela
