cabal-version:      3.0
name:               sabela
version:            0.1.0.0
synopsis:           A reactive notebook environment for Haskell.
description:        A reactive notebook environment for Haskell.
homepage:           https://www.datahaskell.org/
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
extra-source-files: static/index.html, static/dashboard.html, static/slideshow.html, data/api-reference.txt

common warnings
    ghc-options: -Wall

library
    import:           warnings
    autogen-modules:  Paths_sabela
    other-modules:    Paths_sabela
                      Sabela.Parse.Ast.PatNodeBinders
                      Sabela.Parse.Ast.Names
    exposed-modules:  Sabela.Anthropic,
                      Sabela.Anthropic.Types,
                      Sabela.Anthropic.Types.Request,
                      Sabela.Anthropic.Types.Response,
                      Sabela.Anthropic.Types.Stream,
                      Sabela.AI.Types,
                      Sabela.AI.Store,
                      Sabela.Ids,
                      Sabela.AI.Capabilities,
                      Sabela.AI.Capabilities.Edit,
                      Sabela.AI.Capabilities.Edit.Run,
                      Sabela.AI.Capabilities.Notebook,
                      Sabela.AI.Capabilities.Query,
                      Sabela.AI.Capabilities.Scratchpad,
                      Sabela.AI.Capabilities.ToolName,
                      Sabela.AI.Capabilities.Tools,
                      Sabela.AI.Capabilities.Tools.Notebook,
                      Sabela.AI.Capabilities.Tools.Query,
                      Sabela.AI.Capabilities.Util,
                      Sabela.AI.Doc,
                      Sabela.AI.Handles,
                      Sabela.AI.Orchestrator,
                      Sabela.AI.Orchestrator.Loop,
                      Sabela.AI.Orchestrator.Prompt,
                      Sabela.AI.ReferenceCard,
                      Sabela.Session,
                      Sabela.Session.Process,
                      Sabela.SessionTypes,
                      Sabela.Model,
                      Sabela.Api,
                      Sabela.Bridge,
                      Sabela.Dashboard,
                      Sabela.Deps,
                      Sabela.Export,
                      Sabela.Export.Analyze,
                      Sabela.Export.Block,
                      Sabela.Export.Reactive,
                      Sabela.Export.Trailing,
                      Sabela.Export.Widget,
                      Sabela.Parse,
                      Sabela.Parse.Ast,
                      Sabela.Reactivity,
                      Sabela.State,
                      Sabela.State.BridgeStore,
                      Sabela.State.DependencyTracker,
                      Sabela.State.Environment,
                      Sabela.State.EventBus,
                      Sabela.State.NotebookStore,
                      Sabela.State.SessionManager,
                      Sabela.State.WidgetStore,
                      Sabela.Handlers,
                      Sabela.Handlers.Exec,
                      Sabela.Handlers.Lifecycle,
                      Sabela.Handlers.Plan,
                      Sabela.Handlers.Shared,
                      Sabela.Handlers.Python,
                      Sabela.Output,
                      Sabela.Output.Examples,
                      Sabela.Output.Scatter,
                      Sabela.Errors,
                      Sabela.Server,
                      Sabela.Server.Ai,
                      Sabela.Server.Api,
                      Sabela.Server.Export,
                      Sabela.Server.Files,
                      Sabela.Server.Import,
                      Sabela.Server.Notebook,
                      Sabela.Server.Run,
                      Sabela.Server.Static,
                      Sabela.Topo,
                      Sabela.Url,
                      Sabela.PythonSession
    build-depends:    base >= 4 && < 5,
                      aeson >= 0.11.0.0 && < 3,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3 && < 1.4,
                      file-embed >= 0.0.11 && < 0.1,
                      filepath >= 1.4 && < 1.6,
                      ghc-lib-parser >= 9.6 && < 9.20,
                      ghc-lib-parser-ex >= 9.6 && < 9.20,
                      uniplate >= 1.6 && < 1.7,
                      hashable >= 1.3 && < 1.6,
                      http-client >= 0.7 && < 0.10,
                      http-types >= 0.12 && < 0.13,
                      process >= 1.6 && < 1.8,
                      scripths >= 0.4 && < 0.5,
                      servant-server >= 0.20 && < 0.21,
                      stm >= 2.4 && < 3,
                      temporary >= 1.3 && < 1.4,
                      text >= 1.2 && < 3,
                      time >= 1.9 && < 2,
                      wai >= 3.2 && < 3.3
    hs-source-dirs:   src
    if impl(ghc >= 9.6)
        hs-source-dirs:   src-ghc96
    else
        hs-source-dirs:   src-ghc94
    default-language: Haskell2010

executable sabela
  main-is: Main.hs
  build-depends: base >= 4 && < 5,
                 aeson >= 0.11.0.0 && < 3,
                 bytestring >= 0.10 && < 0.13,
                 containers >= 0.6.7 && < 0.9,
                 directory >= 1.3 && < 1.4,
                 filepath >= 1.4 && < 1.6,
                 http-client-tls >= 0.3 && < 0.4,
                 text >= 1.2 && < 3,
                 process >= 1.6 && < 1.8,
                 warp >= 3.3  && < 3.5,
                 sabela
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite sabela-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.SessionSpec,
                      Test.TopoSpec,
                      Test.TopoSpec.Helpers,
                      Test.TopoSpec.Names,
                      Test.TopoSpec.Order,
                      Test.TopoSpec.Select,
                      Test.ExportSpec,
                      Test.DefaultExtsSpec,
                      Test.NotebookExportSpec,
                      Test.ParseSpec,
                      Test.OutputSpec,
                      Test.PreinstalledSpec,
                      Test.ProseRoundTripSpec,
                      Test.GenerationSpec,
                      Test.AiDocSpec,
                      Test.AiHandlesSpec,
                      Test.AiHistorySpec,
                      Test.AiRestSpec,
                      Test.CacheControlSpec,
                      Test.CompactResultSpec,
                      Test.CycleMsgSpec,
                      Test.ScratchpadRenderSpec,
                      Test.ToolParseSpec,
                      Test.UploadSpec,
                      Test.UrlSpec,
                      Test.UsageEventSpec,
                      Test.UsageMergeSpec,
                      Test.ApiWireSpec
    build-depends:
        base >= 4 && < 5,
        aeson >= 0.11.0.0 && < 3,
        bytestring >= 0.10 && < 0.13,
        containers >= 0.6.7 && < 0.9,
        hspec >= 2 && < 3,
        directory >= 1.3.0.0 && < 2,
        scripths >= 0.4 && < 0.5,
        stm >= 2.4 && < 3,
        temporary >= 1.3 && < 1.4,
        text >= 1.2 && < 3,
        sabela

test-suite sabela-webdriver
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          WebDriverMain.hs
    other-modules:    Test.WebDriverSpec,
                      Test.WebDriverHelpers
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    build-depends:
        base >= 4 && < 5,
        hspec >= 2 && < 3,
        webdriver >= 0.12 && < 0.13,
        http-client >= 0.7 && < 0.10,
        directory >= 1.3.0.0 && < 2,
        http-types >= 0.12 && < 0.13,
        network >= 3.0 && < 3.3,
        text >= 1.2 && < 3,
        process >= 1.6 && < 1.8,
        warp >= 3.3 && < 3.5,
        containers >= 0.6.7 && < 0.9,
        sabela
