cabal-version:      3.0
name:               sabela-hub
version:            0.1.0.0
synopsis:           Session proxy for multi-user Sabela deployment
license:            MIT
license-file:       ../LICENSE
author:             DataHaskell
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Hub.Types,
                      Hub.Config,
                      Hub.Ecs,
                      Hub.OAuth,
                      Hub.Session,
                      Hub.Proxy,
                      Hub.Reaper
    build-depends:    base >= 4 && < 5,
                      aeson >= 2 && < 3,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6 && < 0.9,
                      http-client >= 0.7 && < 0.8,
                      http-client-tls >= 0.3 && < 0.4,
                      http-types >= 0.12 && < 0.13,
                      process >= 1.6 && < 1.8,
                      stm >= 2.4 && < 3,
                      text >= 1.2 && < 3,
                      time >= 1.9 && < 2,
                      wai >= 3.2 && < 3.3,
                      warp >= 3.3 && < 3.5
    hs-source-dirs:   src
    default-language: Haskell2010

executable sabela-hub
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4 && < 5,
                      sabela-hub,
                      http-client >= 0.7 && < 0.8,
                      http-client-tls >= 0.3 && < 0.4,
                      stm >= 2.4 && < 3,
                      text >= 1.2 && < 3,
                      warp >= 3.3 && < 3.5
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

test-suite sabela-hub-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Test.MockEcs,
                      Test.AuthSpec,
                      Test.SessionSpec,
                      Test.ReaperSpec,
                      Test.ProxySpec
    build-depends:    base >= 4 && < 5,
                      sabela-hub,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6 && < 0.9,
                      hspec >= 2 && < 3,
                      http-client >= 0.7 && < 0.8,
                      http-client-tls >= 0.3 && < 0.5,
                      http-types >= 0.12 && < 0.13,
                      stm >= 2.4 && < 3,
                      text >= 1.2 && < 3,
                      time >= 1.9 && < 2,
                      wai >= 3.2 && < 3.3,
                      wai-extra >= 3.1 && < 3.2,
                      warp >= 3.3 && < 3.5
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded
